...
          title: "Update Event",
          headerRight: () => (
            <Button
              size="sm"
              variant="ghost"
              onPress={() => formRef.current?.submit()}
              testID="event-detail-update-save-button"
            >
              <Text className="text-sm font-semibold text-primary">Save</Text>
            </Button>
          ),
        }}
      />
...
